examples/example_49/example_49.v
Definition unneeded := True.
Definition foo := True.
Fail Check example_49.foo.
